// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvaa cSPctO"
  >
    text
    <span
      class="sc-gsDJrp kIPvUx"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvaa cSPctO"
  >
    text
    <span
      class="sc-gsDJrp hYkwFL"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
